alignment fixes for letter casing

--- a/editor.style.css
+++ b/editor.style.css
@@ -272,6 +272,7 @@ input:checked + .switch-slider:before {
 
 .settings-view {
   width: 250px;
+  padding-right: 4px;
   height: 100%;
   background: var(--white);
   position: absolute;
@@ -631,16 +632,17 @@ input:checked + .switch-slider:before {
 
 .color-mode-title {
   font-size: 14px;
-  background-color: var(--lighter);
+  /* background-color: var(--lighter); */
   border: 1px solid transparent;
   font-weight: 500;
+  font-size: 16px;
   width: 175px;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 0 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  color: var(--gray);
+  justify-content: flex-start;
+  color: var(--gray-light);
   transition: 0.2s ease-out all;
   cursor: context-menu;
 }
@@ -1258,4 +1260,9 @@ body {
 
 .color_mode_title-active {
   border-bottom: 2px solid var(--gold);
+}
+
+.none-icon:hover {
+  opacity: 0.7;
+  cursor: pointer;
 }
